<resources>
    <string name="app_name">Duex</string>
    <string name="username">Type your email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup_text">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="age_range_prompt">Age Range Prompt</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="log_out">Log out</string>
    <string name="send_a_quiz">Send a quiz</string>
    <string name="answer_the_quiz">Answer the quiz</string>
    <string name="all_homeworks">All Homeworks</string>
    <string name="add_homework">Add Homework</string>
    <string name="tap_to_speak">Tap to Speak</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="time">Time</string>
</resources>