<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".Add_dataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="50dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Add a homework"
            android:textColor="@android:color/black"
            android:textSize="22sp"/>

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Homework title" />

        <EditText
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:padding="10dp"
            android:id="@+id/addHomeworkTitle"/>

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Homework description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:textSize="14sp"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/tap_to_speak"
                android:singleLine="true"
                android:padding="10dp"
                android:id="@+id/addHomeworkDescription"/>

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="#F9F8FA"
                android:src="@drawable/baseline_mic_24"
                android:layout_gravity="right"
                android:id="@+id/speechButton"/>

        </LinearLayout>

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Due date" />

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_border"
            android:id="@+id/dueDate" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/time" />

        <TimePicker
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:padding="10dp"
            android:id="@+id/timePicker" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/latitude_textview"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textSize="18sp"
                android:layout_marginTop="50dp"/>


            <TextView
                android:id="@+id/longitude_textview"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="18sp"
                android:layout_marginTop="20dp"/>

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="#F9F8FA"
                android:src="@drawable/baseline_add_location_alt_24"
                android:layout_gravity="right"
                android:id="@+id/get_location_button"/>
         </LinearLayout>

        <EditText
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:padding="10dp"
            android:id="@+id/Event" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddHomework"
            android:text="Add Homework"
            android:background="@drawable/btn_background"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="40dp" />

    </LinearLayout>


</ScrollView>